Fixed several bugs, revisited code, simplified things

--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -28,8 +28,8 @@
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 7)\n",
+    "START_DATE = date(2019, 4, 1)\n",
+    "END_DATE = date(2024, 3, 30)\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,19 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "###\n",
-    "path = POLYGON_DATA_PATH + \"../market/market_calendar.csv\"\n",
+    "path = POLYGON_DATA_PATH + \"market/market_calendar.csv\"\n",
+    "\n",
+    "def download_SPY(start, end):\n",
+    "    SPY_d1 = pd.DataFrame(client.get_aggs(ticker = \"SPY\", multiplier = 1, timespan = \"day\", from_ = start, to = end, limit=50000))\n",
+    "    SPY_d1[\"timestamp\"] = pd.to_datetime(SPY_d1[\"timestamp\"], unit=\"ms\").dt.date\n",
+    "    SPY_d1.rename(columns = {\"timestamp\": \"date\"}, inplace=True)\n",
+    "    return SPY_d1[[\"date\"]]\n",
     "\n",
     "# Get list of trading dates\n",
     "if not os.path.isfile(path):\n",
-    "    SPY_d1 = pd.DataFrame(client.get_aggs(ticker = \"SPY\", multiplier = 1, timespan = \"day\", from_ = START_DATE, to = END_DATE, limit=50000))\n",
-    "    SPY_d1[\"timestamp\"] = pd.to_datetime(SPY_d1[\"timestamp\"], unit=\"ms\").dt.date\n",
-    "    SPY_d1.rename(columns = {\"timestamp\": \"date\"}, inplace=True)\n",
-    "    trading_days = SPY_d1[[\"date\"]]\n",
+    "    trading_days = download_SPY(START_DATE, END_DATE)\n",
     "else:\n",
     "    # If we already have it we just need to update\n",
     "    old_market_hours = pd.read_csv(\n",
@@ -120,10 +123,7 @@
     "    old_trading_days = old_market_hours[[\"date\"]]\n",
     "    last_day_old = old_trading_days['date'].values[-1]\n",
     "\n",
-    "    SPY_d1 = pd.DataFrame(client.get_aggs(ticker = \"SPY\", multiplier = 1, timespan = \"day\", from_ = (last_day_old + timedelta(days=1)).isoformat(), to = END_DATE, limit=50000))\n",
-    "    SPY_d1[\"timestamp\"] = pd.to_datetime(SPY_d1[\"timestamp\"], unit=\"ms\").dt.date\n",
-    "    SPY_d1.rename(columns = {\"timestamp\": \"date\"}, inplace=True)\n",
-    "    new_trading_days = SPY_d1[[\"date\"]]\n",
+    "    new_trading_days = download_SPY((last_day_old + timedelta(days=1)).isoformat(), END_DATE)\n",
     "\n",
     "    trading_days = pd.concat([old_trading_days, new_trading_days])\n",
     "    trading_days.drop_duplicates(inplace=True)\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "2023-07-03       04:00:00     09:30:00      12:59:00         16:59:00"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
     "        DataFrame: the index contains Date objects and the columns Time objects.\n",
     "    \"\"\"\n",
     "    market_hours = pd.read_csv(\n",
-    "        POLYGON_DATA_PATH + \"../market/market_calendar.csv\", index_col=0\n",
+    "        POLYGON_DATA_PATH + \"market/market_calendar.csv\", index_col=0\n",
     "    )\n",
     "    market_hours.index = pd.to_datetime(market_hours.index).date\n",
     "    market_hours.premarket_open = pd.to_datetime(\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,35 +431,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-08-28</th>\n",
+       "      <th>2024-02-26</th>\n",
        "      <td>04:00:00</td>\n",
        "      <td>09:30:00</td>\n",
        "      <td>15:59:00</td>\n",
        "      <td>19:59:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-08-29</th>\n",
+       "      <th>2024-02-27</th>\n",
        "      <td>04:00:00</td>\n",
        "      <td>09:30:00</td>\n",
        "      <td>15:59:00</td>\n",
        "      <td>19:59:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-08-30</th>\n",
+       "      <th>2024-02-28</th>\n",
        "      <td>04:00:00</td>\n",
        "      <td>09:30:00</td>\n",
        "      <td>15:59:00</td>\n",
        "      <td>19:59:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-08-31</th>\n",
+       "      <th>2024-02-29</th>\n",
        "      <td>04:00:00</td>\n",
        "      <td>09:30:00</td>\n",
        "      <td>15:59:00</td>\n",
        "      <td>19:59:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-09-01</th>\n",
+       "      <th>2024-03-01</th>\n",
        "      <td>04:00:00</td>\n",
        "      <td>09:30:00</td>\n",
        "      <td>15:59:00</td>\n",
@@ -471,14 +471,14 @@
       ],
       "text/plain": [
        "           premarket_open regular_open regular_close postmarket_close\n",
-       "2023-08-28       04:00:00     09:30:00      15:59:00         19:59:00\n",
-       "2023-08-29       04:00:00     09:30:00      15:59:00         19:59:00\n",
-       "2023-08-30       04:00:00     09:30:00      15:59:00         19:59:00\n",
-       "2023-08-31       04:00:00     09:30:00      15:59:00         19:59:00\n",
-       "2023-09-01       04:00:00     09:30:00      15:59:00         19:59:00"
+       "2024-02-26       04:00:00     09:30:00      15:59:00         19:59:00\n",
+       "2024-02-27       04:00:00     09:30:00      15:59:00         19:59:00\n",
+       "2024-02-28       04:00:00     09:30:00      15:59:00         19:59:00\n",
+       "2024-02-29       04:00:00     09:30:00      15:59:00         19:59:00\n",
+       "2024-03-01       04:00:00     09:30:00      15:59:00         19:59:00"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,17 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = download_m1_raw_data(\"SPY\", from_ = date(2019, 1, 2), to = date(2023, 8, 18), client=client)\n",
-    "data.to_parquet(POLYGON_DATA_PATH + \"../market/SPY.csv\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
+    "data = download_m1_raw_data(\"SPY\", from_ = START_DATE, to = END_DATE, client=client)\n",
+    "data.to_csv(POLYGON_DATA_PATH + \"market/SPY.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
    ],
    "source": [
     "SPY_m1 = pd.read_csv(\n",
-    "        POLYGON_DATA_PATH + \"../market/SPY.csv\",\n",
+    "        POLYGON_DATA_PATH + \"market/SPY.csv\",\n",
     "        parse_dates=True,\n",
     "        index_col=\"datetime\",\n",
     "        usecols=[\"datetime\"]\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "2023-07-03 16:59:00  2023-07-03    16"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -762,6 +762,11 @@
        "      <td>2023-07-03</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-11-24 16:57:00</th>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -776,10 +781,11 @@
        "2020-12-24 16:59:00  2020-12-24    16\n",
        "2021-11-26 16:59:00  2021-11-26    16\n",
        "2022-11-25 16:59:00  2022-11-25    16\n",
-       "2023-07-03 16:59:00  2023-07-03    16"
+       "2023-07-03 16:59:00  2023-07-03    16\n",
+       "2023-11-24 16:57:00  2023-11-24    16"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
