--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
     "\n",
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 7)\n",
+    "START_DATE = date(2019, 6, 1)\n",
+    "END_DATE = date(2024, 3, 1)\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ETF</td>\n",
-       "      <td>0001100663</td>\n",
+       "      <td>0001179444</td>\n",
        "      <td>BBG000BHR296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -155,11 +155,11 @@
        "\n",
        "   end_date type         cik composite_figi  \n",
        "0       NaN  ETF  0001064642   BBG000RFQSH8  \n",
-       "1       NaN  ETF  0001100663   BBG000BHR296  \n",
+       "1       NaN  ETF  0001179444   BBG000BHR296  \n",
        "2       NaN  ETF  0001100663   BBG000BWC7P0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,6 +178,8 @@
     "tickers_ETP = tickers_ETP[['ticker', 'name', 'active', 'cik', 'composite_figi', 'type']]\n",
     "tickers_ETP = tickers_ETP[tickers_ETP[\"ticker\"].isin(all_ETFs)]\n",
     "tickers_ETP = tickers_ETP.reindex(columns = [\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"type\", \"cik\", \"composite_figi\"]) \n",
+    "tickers_ETP = tickers_ETP[~tickers_ETP['ticker'].duplicated()]\n",
+    "\n",
     "tickers_ETP.reset_index(drop=True, inplace=True)\n",
     "\n",
     "tickers_ETP.head(3)"
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -292,37 +294,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8409</th>\n",
-       "      <td>GLD-2019-01-01</td>\n",
+       "      <th>8614</th>\n",
+       "      <td>GLD-2019-06-01</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-07</td>\n",
+       "      <td>2019-06-01</td>\n",
+       "      <td>2024-03-01</td>\n",
        "      <td>ETV</td>\n",
        "      <td>0001222333</td>\n",
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8410</th>\n",
-       "      <td>SLV-2019-01-01</td>\n",
+       "      <th>8615</th>\n",
+       "      <td>SLV-2019-06-01</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-07</td>\n",
+       "      <td>2019-06-01</td>\n",
+       "      <td>2024-03-01</td>\n",
        "      <td>ETV</td>\n",
        "      <td>0001330568</td>\n",
        "      <td>BBG000NDCRW7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8411</th>\n",
-       "      <td>$VIX-2019-01-01</td>\n",
+       "      <th>8616</th>\n",
+       "      <td>$VIX-2019-06-01</td>\n",
        "      <td>$VIX</td>\n",
        "      <td>VIX Index</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-07</td>\n",
+       "      <td>2019-06-01</td>\n",
+       "      <td>2024-03-01</td>\n",
        "      <td>INDEX</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -333,17 +335,17 @@
       ],
       "text/plain": [
        "                   ID ticker                               name  active  \\\n",
-       "8409   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "8410   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
-       "8411  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
+       "8614   GLD-2019-06-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
+       "8615   SLV-2019-06-01    SLV               iShares Silver Trust    True   \n",
+       "8616  $VIX-2019-06-01   $VIX                          VIX Index    True   \n",
        "\n",
        "      start_date    end_date   type         cik composite_figi  \n",
-       "8409  2019-01-01  2023-09-07    ETV  0001222333   BBG000CRF6Q8  \n",
-       "8410  2019-01-01  2023-09-07    ETV  0001330568   BBG000NDCRW7  \n",
-       "8411  2019-01-01  2023-09-07  INDEX         NaN            NaN  "
+       "8614  2019-06-01  2024-03-01    ETV  0001222333   BBG000CRF6Q8  \n",
+       "8615  2019-06-01  2024-03-01    ETV  0001330568   BBG000NDCRW7  \n",
+       "8616  2019-06-01  2024-03-01  INDEX         NaN            NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
