--- a/05_adjustments.ipynb
+++ b/05_adjustments.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 7)\n",
+    "START_DATE = date(2019, 6, 1)\n",
+    "END_DATE = date(2024, 3, 1)\n",
     "\n",
-    "CLEAN_DOWNLOAD = False # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
+    "CLEAN_DOWNLOAD = True # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -54,7 +54,6 @@
    "outputs": [],
    "source": [
     "# Loop through all tickers\n",
-    "tickers_to_process = []\n",
     "tickers_v3 = get_tickers(v=3)\n",
     "\"\"\"\n",
     "To keep track of which dates the adjustments folder has, we save the end date to _end_date.txt.\n",
@@ -103,9 +102,6 @@
     "    if splits.empty and dividends.empty:\n",
     "        continue\n",
     "\n",
-    "    # Store which stocks we need to split/div adjust\n",
-    "    tickers_to_process.append(ticker)\n",
-    "\n",
     "    # Merge dividends and splits\n",
     "    adjustments = pd.concat([dividends, splits])\n",
     "    adjustments = adjustments.sort_values(by='date').reset_index(drop=True)\n",
@@ -137,18 +133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "with open(POLYGON_DATA_PATH + f'raw/adjustments/_tickers_to_process.csv', 'w') as file:\n",
-    "    writer = csv.writer(file)\n",
-    "    writer.writerow(tickers_to_process)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,18 +178,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022-03-21</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-04-05</th>\n",
-       "      <td>SPLIT</td>\n",
-       "      <td>R</td>\n",
-       "      <td>4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022-06-29</th>\n",
        "      <td>DIV</td>\n",
        "      <td>CD</td>\n",
@@ -235,23 +207,35 @@
        "      <td>CD</td>\n",
        "      <td>0.35</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-29</th>\n",
+       "      <td>DIV</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-28</th>\n",
+       "      <td>DIV</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             type subtype  amount\n",
-       "date                             \n",
-       "2022-03-21    DIV      CD    0.44\n",
-       "2022-04-05  SPLIT       R    4.00\n",
-       "2022-06-29    DIV      CD    0.44\n",
-       "2022-09-29    DIV      CD    0.44\n",
-       "2022-12-29    DIV      CD    0.35\n",
-       "2023-03-30    DIV      CD    0.35\n",
-       "2023-06-29    DIV      CD    0.35"
+       "           type subtype  amount\n",
+       "date                           \n",
+       "2022-06-29  DIV      CD    0.44\n",
+       "2022-09-29  DIV      CD    0.44\n",
+       "2022-12-29  DIV      CD    0.35\n",
+       "2023-03-30  DIV      CD    0.35\n",
+       "2023-06-29  DIV      CD    0.35\n",
+       "2023-09-29  DIV      CD    0.35\n",
+       "2023-12-28  DIV      CD    0.35"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +305,7 @@
        "2022-08-25  SPLIT       N  0.333333"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,10 +319,13 @@
    "metadata": {},
    "source": [
     "### Updates\n",
-    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False. The code is already structured in such a way that only the necessary is downloaded. The tickers that we need to process (thus that had new split/dividend data) are stored in <code>raw/adjustments/tickers_to_process.csv</code>.\n",
-    "\n",
-    "This will take around 20 minutes."
+    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False. The code is already structured in such a way that only the necessary is downloaded. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
