Remove ignored files

--- a/13_backtesting_vectorized.ipynb
+++ b/13_backtesting_vectorized.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 13.1 Backtesting\n",
+    "# 13.1 Vectorized backtesting\n",
     "I will try out a popular strategy using the IBS indicator. I want to see if I can match the results on [here](https://www.quantifiedstrategies.com/internal-bar-strength-ibs-indicator-strategy/). I will also use pure pandas.\n",
     "\n",
     "* Universe: SPY ETF\n",
