--- a/x_get_fundamentals.ipynb
+++ b/x_get_fundamentals.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fundamentals (POSTPONED)\n",
+    "# Fundamentals (discontinued)\n",
+    "Fundamentals are discontinued because I mainly trade technical and fundamentals are cumbersome.\n",
+    "\n",
     "The fundamentals that I want are:\n",
     "* Easy to get:\n",
     "    * Company headquarters location\n",
