--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -48,13 +48,13 @@
     "4. Add ETPs.\n",
     "5. Download adjustments.\n",
     "6. Download raw prices.\n",
-    "7. Data cleaning, however we skip this.\n",
-    "8. Processing data.\n",
-    "9. Renamings.\n",
-    "10. Aggregate to higher timeframes.\n",
-    "11. Some extra handy functions.\n",
-    "12. Simulating point-in-time screening for day trading and backtesting.\n",
-    "13. Playing around with the data.\n",
+    "7. Processing data.\n",
+    "8. Renamings.\n",
+    "9. Aggregate to higher timeframes.\n",
+    "10. Some extra handy functions.\n",
+    "11. Simulating point-in-time screening for day trading and backtesting.\n",
+    "12. Vectorized backtesting\n",
+    "13. Loop-based backtesting\n",
     "\n",
     "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00.*"
    ]
