--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.1 Processing raw data\n",
+    "# 7.1 Processing raw data\n",
     "This section combines the raw data, the adjustments and cleaned bars to get processed 1-minute data. After processing we also detect the halts to create a <code>halted</code> flag. There are no gaps for processed data. All stocks that are active on a certain day have minute bars for every minute, from pre to post market, even if no trades took place. Empty bars are forward filled. Only for the first day, backwards filling may be done. All processed data will have the following columns: <code>['open', 'high', 'low', 'close', 'close_original', 'volume', 'tradeable', 'halted']</code>. The 'close_original' is the unadjusted price. This is needed for filtering, e.g. only the stocks above $1.\n",
     "\n",
     "The steps:\n",
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.2 Split adjustment"
+    "# 7.2 Split adjustment"
    ]
   },
   {
@@ -617,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.3 Dividend adjustment\n",
+    "# 7.3 Dividend adjustment\n",
     "There is no single way to adjust for dividends. We use the [stockcharts](https://support.stockcharts.com/doku.php?id=policies:historical_price_data_is_adjusted_for_splits_dividends_and_distributions#:~:text=Dividend%20Adjustment%20Calculation%20Details%3A,then%20multiplied%20by%20this%20factor) or [Yahoo](https://help.yahoo.com/kb/SLN28256.html) method, which mimics dividend reinvesting at the close of cum-dividend date. If at cum-dividend the price is 60, and at ex-dividend is 50 after a 10/share dividend, then all prices from cum-dividend and before are adjusted by the factor *1 - (dividend/cumdividend close)*. So the adjusted cum-dividend close will be 50. \n",
     "\n",
     "Note: Even though the close (which can differ on early close days) is used to calculate the adjustment factor, the post-market prices also have to be adjusted. "
@@ -1242,7 +1242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.4 Reindexing and NA values"
+    "# 7.4 Reindexing and NA values"
    ]
   },
   {
@@ -1453,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.5 Halt detection\n",
+    "# 7.5 Halt detection\n",
     "We cannot detect all halts without tick data. However we are not interested in pre- and post-market halts anyways. We care about the liquid stocks that are halted intraday and have decent volume. Halts take a minimum of 5 minutes. This means at least 4 OHLC 1-minutes bars with no data, because a halt can start *during* the OHLC bar.\n",
     "\n",
     "For each stock where the turnover is more than 2.5 million dollars we will check whether there are 4 empty bars during regular hours. Illiquid stocks do not trade all minutes and may be incorrectly flagged. This happens quite often.\n",
@@ -1773,7 +1773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.6 Putting it all in a loop\n",
+    "# 7.6 Putting it all in a loop\n",
     "It took me 5 hours to run. The files take up around 80 GB for data from 2019-01-01 to 2023-09-01. If you want to save space, use the pyarrow + brotli compression. But this takes longer to run."
    ]
   },
@@ -1787,7 +1787,23 @@
      "output_type": "stream",
      "text": [
       "There is no data for AAXN-2023-09-08\n",
-      "There is no data for ABIL-2023-09-08\n"
+      "There is no data for ABIL-2023-09-08\n",
+      "There is no data for ACRV-2022-11-10\n",
+      "There is no data for AEON-2021-10-08\n",
+      "There is no data for AFCG-2021-02-11\n",
+      "There is no data for ALPX-2022-10-19\n",
+      "There is no data for AMDI-2024-02-13\n",
+      "There is no data for AMDI-2024-02-29\n",
+      "There is no data for ASPI-2020-11-16\n",
+      "There is no data for AZTR-2023-05-24\n",
+      "There is no data for BFRG-2023-01-26\n",
+      "There is no data for BFRG-2023-02-03\n",
+      "There is no data for BT-2023-09-08\n",
+      "There is no data for CCIH-2019-06-03\n",
+      "There is no data for CHFS-2023-09-08\n",
+      "There is no data for DELT-2019-06-03\n",
+      "There is no data for DELT-2023-09-08\n",
+      "There is no data for HKIT-2021-07-20\n"
      ]
     }
    ],
@@ -1827,7 +1843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.7 Updating the ticker list\n",
+    "# 7.7 Updating the ticker list\n",
     "Now that we have the data, we can add two columns <code>start_data</code> and <code>end_data</code>."
    ]
   },
@@ -1871,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.8 Updates\n",
+    "# 7.8 Updates\n",
     "Not implemented. However, we should only process the tickers that had splits/divs in the update period. The rest only has to be reindex/filled+flagged. Then appended.\n",
     "\n",
     "For now, just rerun everything after updating END_DATE."
