--- a/10_extra_functions.ipynb
+++ b/10_extra_functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extra functions\n",
+    "# 10. Extra functions\n",
     "Some extra functions useful for the future."
    ]
   },
